tomato-code/k8s/restaurant-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant
  namespace: tomato
spec:
  template:
    spec:
      containers:
      - name: restaurant
