tomato-code/k8s/rider-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rider
  namespace: tomato
spec:
  template:
    spec:
      containers:
      - name: rider
