tomato-code/k8s/utils-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utils
  namespace: tomato
spec:
  template:
    spec:
      containers:
      - name: utils
