tomato-code/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tomato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ravibhadarge/tomato-frontend:v1.0.7
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: tomato
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
